--- a/test.html
+++ b/test.html
@@ -83,6 +83,60 @@
         <label><input type="radio" name="q5" value="3" /> Почти каждый день</label>
       </div>
     </div>
+    <!-- Вопрос 6 -->
+    <div class="question">
+      <h3>6. Я испытывал(а) трудности с концентрацией внимания:</h3>
+      <div class="answers">
+        <label><input type="radio" name="q6" value="0" required /> Не испытывал(а)</label>
+        <label><input type="radio" name="q6" value="1" /> Несколько дней</label>
+        <label><input type="radio" name="q6" value="2" /> Более половины дней</label>
+        <label><input type="radio" name="q6" value="3" /> Почти каждый день</label>
+      </div>
+    </div>
+
+    <!-- Вопрос 7 -->
+    <div class="question">
+      <h3>7. Я чувствовал(а) тревогу или нервозность:</h3>
+      <div class="answers">
+        <label><input type="radio" name="q7" value="0" required /> Не испытывал(а)</label>
+        <label><input type="radio" name="q7" value="1" /> Несколько дней</label>
+        <label><input type="radio" name="q7" value="2" /> Более половины дней</label>
+        <label><input type="radio" name="q7" value="3" /> Почти каждый день</label>
+      </div>
+    </div>
+
+    <!-- Вопрос 8 -->
+    <div class="question">
+      <h3>8. Я чувствовал(а) потерю интереса к деятельности:</h3>
+      <div class="answers">
+        <label><input type="radio" name="q8" value="0" required /> Не испытывал(а)</label>
+        <label><input type="radio" name="q8" value="1" /> Несколько дней</label>
+        <label><input type="radio" name="q8" value="2" /> Более половины дней</label>
+        <label><input type="radio" name="q8" value="3" /> Почти каждый день</label>
+      </div>
+    </div>
+
+    <!-- Вопрос 9 -->
+    <div class="question">
+      <h3>9. Я чувствовал(а) раздражение или злость:</h3>
+      <div class="answers">
+        <label><input type="radio" name="q9" value="0" required /> Не испытывал(а)</label>
+        <label><input type="radio" name="q9" value="1" /> Несколько дней</label>
+        <label><input type="radio" name="q9" value="2" /> Более половины дней</label>
+        <label><input type="radio" name="q9" value="3" /> Почти каждый день</label>
+      </div>
+    </div>
+
+    <!-- Вопрос 10 -->
+    <div class="question">
+      <h3>10. Я чувствовал(а) чувство вины или никчемности:</h3>
+      <div class="answers">
+        <label><input type="radio" name="q10" value="0" required /> Не испытывал(а)</label>
+        <label><input type="radio" name="q10" value="1" /> Несколько дней</label>
+        <label><input type="radio" name="q10" value="2" /> Более половины дней</label>
+        <label><input type="radio" name="q10" value="3" /> Почти каждый день</label>
+      </div>
+    </div>
     <button type="submit">Завершить тест</button>
   </form>
 </div>
