--- a/result.html
+++ b/result.html
@@ -1,1 +1,28 @@
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>Результат теста</title>
+</head>
+<body>
+<h1>Ваш результат</h1>
+<div id="result"></div>
+
+<script>
+  // Получение параметра score из URL
+  const params = new URLSearchParams(window.location.search);
+  const score = params.get('score');
+
+  const resultDiv = document.getElementById('result');
+
+  if (score !== null) {
+    resultDiv.innerHTML = `<h3>Ваш итоговый балл: ${score}</h3>`;
+  } else {
+    resultDiv.innerHTML = `<p>Результат не найден. Пожалуйста, сначала пройдите тест.</p>`;
+  }
+</script>
+</body>
+</html>
+
 
