--- a/test.html
+++ b/test.html
@@ -4,11 +4,7 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>Тест Шкала депрессии Бека</title>
-<style>
-  /* Изначально скрываем форму теста и блок с результатом */
-  #depressionTest { display: none; }
-  #result { display: none; margin-top: 20px; }
-</style>
+<link rel="stylesheet" href="styles.css" />
 </head>
 <body>
 
@@ -29,6 +25,20 @@
 <!-- Форма теста -->
 <div id="depressionTest">
   <h1>Тест по шкале депрессии Бека</h1>
+  <form id="testForm">
+    <!-- Вопросы (скопируйте сюда все вопросы) -->
+    <!-- Вопросы можно оставить как есть или сгенерировать динамически -->
+    
+    <!-- Пример вопроса: -->
+    <div class="question">
+      <h3>1. Я чувствовал(а) себя подавленным(ой) или грустным(ой):</h3>
+      <div class="answers">
+        <label><input type="radio" name="q1" value="0" required /> Не испытывал(а)</label><br>
+        <label><input type="radio" name="q1" value="1" /> Несколько дней</label><br>
+        <label><input type="radio" name="q1" value="2" /> Более половины дней</label><br>
+        <label><input type="radio" name="q1" value="3" /> Почти каждый день</label>
+      </div>
+    </div>
   <form id="testForm">
     <!-- Вопрос 1 -->
     <div class="question">
@@ -140,40 +150,14 @@
       </div>
     </div>
 
-    <!-- Кнопка завершения -->
-    <button type="submit">Завершить тест</button>
+   <button type="submit">Завершить тест</button>
   </form>
 </div>
 
 <!-- Блок для отображения результата -->
 <div id="result"></div>
 
-<!-- Скрипт -->
-<script>
-  // Функция для начала теста
-  function startTest() {
-    document.getElementById('instructionSection').style.display = 'none';
-    document.getElementById('depressionTest').style.display = 'block';
-  }
+<script src="script.js"></script>
 
-  // Обработка формы
-  document.getElementById('testForm').addEventListener('submit', function(e) {
-    e.preventDefault(); // чтобы не перезагружать страницу
-    let totalScore = 0;
-
-    // Проходим по всем вопросам
-    for (let i = 1; i <= 10; i++) {
-      const answers = document.querySelectorAll(`input[name="q${i}"]:checked`);
-      if (answers.length > 0) {
-        totalScore += parseInt(answers[0].value);
-      } else {
-       alert(`Пожалуйста, ответьте на вопрос ${i}`);
-        return;
-      }
-    }
-    // Передача результата через URL
-    window.location.href = `result.html?score=${totalScore}`;
-  });
-</script>
 </body>
 </html>
