--- a/process.html
+++ b/process.html
@@ -178,6 +178,7 @@
             <input type="radio" name="q3" value="3">
             <span class="option-text">3 - Я чувствую, что как личность я - полный неудачник.</span>
         </label>
+        <button onclick="nextQuestion(3)">Далее</button>
         <div id="question4" class="question-container">
         <div class="question">4. Что лучше описывает Ваше состояние за прошедшую неделю и сегодня? </div>
         <label class="option">
@@ -196,6 +197,7 @@
             <input type="radio" name="q4" value="3">
             <span class="option-text">3 - Я чувствую, что как личность я - полный неудачник.</span>
         </label>
+            <button onclick="nextQuestion(4)">Далее</button>
                 <div id="question5" class="question-container">
         <div class="question">5. Что лучше описывает Ваше состояние за прошедшую неделю и сегодня? </div>
         <label class="option">
@@ -214,6 +216,7 @@
             <input type="radio" name="q5" value="3">
             <span class="option-text">3 - Я постоянно испытываю чувство вины. </span>
         </label>
+                    <button onclick="nextQuestion(5)">Далее</button>
                         <div id="question6" class="question-container">
         <div class="question">6. Что лучше описывает Ваше состояние за прошедшую неделю и сегодня? </div>
         <label class="option">
@@ -232,6 +235,7 @@
             <input type="radio" name="q6" value="3">
             <span class="option-text">3 - Я чувствую себя уже наказанным. </span>
         </label>
+                            <button onclick="nextQuestion(6)">Далее</button>
                                 <div id="question7" class="question-container">
         <div class="question">7. Что лучше описывает Ваше состояние за прошедшую неделю и сегодня? </div>
         <label class="option">
@@ -250,6 +254,7 @@
             <input type="radio" name="q7" value="3">
             <span class="option-text">3 - Я себя ненавижу. </span>
         </label>
+                                    <button onclick="nextQuestion(7)">Далее</button>
                                         <div id="question8" class="question-container">
         <div class="question">8. Что лучше описывает Ваше состояние за прошедшую неделю и сегодня? </div>
         <label class="option">
@@ -268,6 +273,7 @@
             <input type="radio" name="q8" value="3">
             <span class="option-text">3 - Я виню себя во всем плохом, что происходит. </span>
         </label>
+                                            <button onclick="nextQuestion(8)">Далее</button>
                                                 <div id="question9" class="question-container">
         <div class="question">9. Что лучше описывает Ваше состояние за прошедшую неделю и сегодня? </div>
         <label class="option">
@@ -286,6 +292,7 @@
             <input type="radio" name="q9" value="3">
             <span class="option-text">3 - Я бы убил себя, если бы представился случай. </span>
         </label>
+                                                    <button onclick="nextQuestion(9)">Далее</button>
                                                         <div id="question10" class="question-container">
         <div class="question">10. Что лучше описывает Ваше состояние за прошедшую неделю и сегодня? </div>
         <label class="option">
@@ -304,6 +311,7 @@
             <input type="radio" name="q10" value="3">
             <span class="option-text">3 - Раньше я мог плакать, а сейчас не могу, даже если мне хочется. </span>
         </label>
+                                                            <button onclick="nextQuestion(10)">Далее</button>
                                                                 <div id="question11" class="question-container">
         <div class="question">11. Что лучше описывает Ваше состояние за прошедшую неделю и сегодня? </div>
         <label class="option">
@@ -322,6 +330,7 @@
             <input type="radio" name="q11" value="3">
             <span class="option-text">3 - Я стал равнодушен к вещам, которые меня раньше раздражали. </span>
         </label>
+                                                                    <button onclick="nextQuestion(11)">Далее</button>
                                                                         <div id="question12" class="question-container">
         <div class="question">12. Что лучше описывает Ваше состояние за прошедшую неделю и сегодня? </div>
         <label class="option">
@@ -340,6 +349,7 @@
             <input type="radio" name="q12" value="3">
             <span class="option-text">3 - Я полностью утратил интерес к другим людям.</span>
         </label>
+                                                                            <button onclick="nextQuestion(12)">Далее</button>
                                                                                 <div id="question13" class="question-container">
         <div class="question">13. Что лучше описывает Ваше состояние за прошедшую неделю и сегодня? </div>
         <label class="option">
@@ -358,6 +368,7 @@
             <input type="radio" name="q13" value="3">
             <span class="option-text">3 - Мне труднее принимать решения, чем раньше. </span>
         </label>
+                                                                                    <button onclick="nextQuestion(13)">Далее</button>
                                                                                         <div id="question14" class="question-container">
         <div class="question">14. Что лучше описывает Ваше состояние за прошедшую неделю и сегодня? </div>
         <label class="option">
@@ -376,6 +387,7 @@
             <input type="radio" name="q14" value="3">
             <span class="option-text">3 - Я знаю, что выгляжу безобразно. </span>
         </label>
+                                                                                            <button onclick="nextQuestion(14)">Далее</button>
                                                                                                 <div id="question15" class="question-container">
         <div class="question">15. Что лучше описывает Ваше состояние за прошедшую неделю и сегодня? </div>
         <label class="option">
@@ -394,6 +406,7 @@
             <input type="radio" name="q15" value="3">
             <span class="option-text">3 - Я совсем не могу выполнять никакую работу.</span>
         </label>
+                                                                                                    <button onclick="nextQuestion(15)">Далее</button>
                                                                                                         <div id="question16" class="question-container">
         <div class="question">16. Что лучше описывает Ваше состояние за прошедшую неделю и сегодня? </div>
         <label class="option">
@@ -412,6 +425,7 @@
             <input type="radio" name="q16" value="3">
             <span class="option-text">3 - Я просыпаюсь на несколько часов раньше обычного и больше не могу заснуть.</span>
         </label>
+                                                                                                            <button onclick="nextQuestion(16)">Далее</button>
                                                                                                                 <div id="question17" class="question-container">
         <div class="question">17. Что лучше описывает Ваше состояние за прошедшую неделю и сегодня? </div>
         <label class="option">
@@ -429,7 +443,8 @@
         <label class="option">
             <input type="radio" name="q17" value="3">
             <span class="option-text">3 - Я не могу ничего делать из-за усталости.</span>
-        </label>
+        </label> 
+         <button onclick="nextQuestion(17)">Далее</button>                                                                                                           
                                                                                                                         <div id="question18" class="question-container">
         <div class="question">18. Что лучше описывает Ваше состояние за прошедшую неделю и сегодня? </div>
         <label class="option">
@@ -448,6 +463,7 @@
             <input type="radio" name="q18" value="3">
             <span class="option-text">3 - Я чувствую, что как личность я - полный неудачник.</span>
         </label>
+                                                                                                                            <button onclick="nextQuestion(18)">Далее</button>
                                                                                                                                 <div id="question19" class="question-container">
         <div class="question">19. Что лучше описывает Ваше состояние за прошедшую неделю и сегодня? </div>
         <label class="option">
@@ -466,6 +482,7 @@
             <input type="radio" name="q19" value="3">
             <span class="option-text">3 - Я потерял более 7 кг.</span>
         </label>
+                                                                                                                                    <button onclick="nextQuestion(19)">Далее</button>
                                                                                                                                         <div id="question20" class="question-container">
         <div class="question">20. Что лучше описывает Ваше состояние за прошедшую неделю и сегодня? </div>
         <label class="option">
@@ -484,6 +501,7 @@
             <input type="radio" name="q20" value="3">
             <span class="option-text">3 - Я настолько обеспокоен своим физическим состоянием, что больше ни о чем не могу думать. </span>
         </label>
+                                                                                                                                            <button onclick="nextQuestion(20)">Далее</button>
                                                                                                                                                 <div id="question21" class="question-container">
         <div class="question">21. Что лучше описывает Ваше состояние за прошедшую неделю и сегодня? </div>
         <label class="option">
